added the first draft of the image carousel

--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -6,6 +6,7 @@
 @import "partials/separator";
 @import "partials/menu";
 @import "partials/datepicker";
+@import "partials/carousel";
 body {
     font-family: 'OpenSans-Regular';
 }
