--- a/src/styles/scss/partials/_fonts.scss
+++ b/src/styles/scss/partials/_fonts.scss
@@ -34,6 +34,15 @@
 
 }
 
+/*EXTRA BOLD*/
+@font-face {
+  font-family: "OpenSans-Extrabold";
+  src:url("../fonts/OpenSans-ExtraBold.ttf");
+  font-weight: bold;
+  font-style: normal;
+
+}
+
 /*ITALIC*/
 @font-face {
   font-family: "OpenSans-Italic";
