--- a/src/templates/style-guide.html
+++ b/src/templates/style-guide.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="../styles/css/vendor/prism.css">
     <link rel="stylesheet" href="../styles/css/vendor/guide.css">
+    <link rel="stylesheet" href="../styles/css/vendor/anythingslider.css">
     <link rel="stylesheet" href="../styles/css/custom.css">
     <!-- For Production, Uncomment the following lines below -->
     <!-- End styles here -->
@@ -979,6 +980,41 @@
                     </div>
                 </div>
                 <hr />
+                <hr />
+                <p class="style-info">
+                    For alternate content, apart from images, use the anything slider plugin.</p>
+                <p class="style-example">
+                    Example
+                </p>
+                <div class="style-example">
+                    <div data-xrayhtml class="prism">
+                    <div class="row">
+                        <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                            <ul class="anyslider">
+                            <li class="panel1">
+                                <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                                <div class="carousel-spacer"></div>
+                                <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                            </li>
+                            <li class="panel2">
+                                <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                                <div class="carousel-spacer"></div>
+                                <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                                <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
+                        
+                    </div>
+                </div>
             </div>
             <!-- End Carousel section -->
             <!-- Begin Layout Section -->
@@ -1102,6 +1138,7 @@
     <script src="../scripts/vendor/X-rayHTML.js"></script>
     <script src="../scripts/vendor/prism.min.js"></script>
     <script src="../scripts/vendor/holder.js"></script>
+    <script src="../scripts/vendor/jquery.anythingslider.js"></script>
     <script src="../scripts/custom.js" />
     <script>
     // Function to display the code snippets with syntax highlighting
