--- a/src/styles/scss/partials/_color-palette.scss
+++ b/src/styles/scss/partials/_color-palette.scss
@@ -6,8 +6,9 @@ $silver: #cccccc;
 $shipGray: #363138;
 $doveGray: #666666;
 $concrete: #f2f2f2;
-
+$prussianBlue: #002e4d;
 $primary-color1: $barberry;
+$primary-color2: $prussianBlue;
 
 $greyscale-color1: $white;
 $greyscale-color2: $silver;
