--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -7,6 +7,13 @@
 @import "partials/menu";
 @import "partials/datepicker";
 @import "partials/carousel";
+@import "partials/top-links";
+@import "partials/nav";
+
 body {
     font-family: 'OpenSans-Regular';
+}
+
+.carousel-container {
+	padding: 0;
 }
