update: included the datepicker and dummy list of events to the landing page

--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -10,10 +10,9 @@
 @import "partials/top-links";
 @import "partials/nav";
 
+// Import the page level scss
+@import "pages/main";
+
 body {
     font-family: 'OpenSans-Regular';
-}
-
-.carousel-container {
-	padding: 0;
 }
