update: added the our priests section to the landing page.

--- a/src/styles/scss/pages/_main.scss
+++ b/src/styles/scss/pages/_main.scss
@@ -78,6 +78,11 @@ img.welcome-church-logo {
 	}
 }
 
+.anyslider-carousel-container{
+	padding-right: 0;
+	padding-left: 0;
+}
+
 @media screen and (max-width: 767px) {
     // Remove the spacing for the lower resolutions - below 768px
     .additional-margin-top {
