--- a/src/styles/scss/partials/_carousel.scss
+++ b/src/styles/scss/partials/_carousel.scss
@@ -55,6 +55,9 @@
 	margin-right: 27px;
 }
 
+.carousel-inline-last-images {
+	margin-right: 0;
+}
 // Spacer div between two rows of images in the anything slider
 .carousel-spacer {
 	clear: both;
