--- a/src/styles/scss/pages/_main.scss
+++ b/src/styles/scss/pages/_main.scss
@@ -135,6 +135,7 @@ img.welcome-church-logo {
 }
 .additional-link-list {
 	padding-left: 0;
+	margin-top: 30px;
 	li {
 		height: 120px;
 		list-style-type: none;
